# libretro_android_test

./: CMakeLists.txt  README.md  build.sh  copy_lib.sh
src/: libretro.c
